@@ -1,4 +1,4 @@
-# Test procedures in lib/utils.exp.
+# Test procedures in lib/utils.exp.				-*- Tcl -*-
 
 set srcdir [lindex $argv 0]
 set subdir [lindex $argv 1]
